--- a/singerContent/css/index.css
+++ b/singerContent/css/index.css
@@ -32,6 +32,9 @@
     display: flex;
     font-size: 16px;
     margin: 6px 0;
+    white-space: nowrap;
+    overflow: hidden;
+    text-overflow: ellipsis;
 }
 .container_head .right .item_desc p{
     margin: 0 5px 0 0;
